--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Esse é o JavaScript</title>
 </head>
 <body>
-  
+  <h1>Esse é o JavaScript</h1>
+  <script src="script.js"></script>
 </body>
 </html>
